--- a/gui/package.json
+++ b/gui/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "smart-webcomponents": "^18.0.26",
     "vue": "^3.2.13",
     "vue-lightbox-advanced": "^2.0.1"
   },
